tests/cases/should_fail/literals/multi_error_char.hash
// Should report that both these have invalid codepoints but recover from the error.
main := () => {
    a := 'ab';

    c := 'ddddd';
};
